# index.ts
@@ -6,11 +6,10 @@ var user = require('./config/user.route')
 var userMiddleware = require('./src/middleware/UserMiddleware')
 
 app.use(bodyParser.json())
-app.use('/login', userMiddleware.verifyBodyLogin)
 
-app.post('/users', user.addNewUser)
-app.post('/login', user.loginUser)
-app.put('/users/:id', user.updateUser)
+app.post('/users', userMiddleware.verifyBodyUser, user.addNewUser)
+app.post('/login', userMiddleware.verifyBodyLogin, user.loginUser)
+app.put('/users/:id', userMiddleware.verifyBodyUser, user.updateUser)
 app.get('/users', user.listUsers)
 app.get('/users/:id', user.getOneUser)
 app.delete('/users/:id', user.removeUser)
